test/Neg/termina/function_call/param_ak_mismatch.fin

function fun0(p : &u32) -> u32 {

    return 0;

}

function main() -> u32 {

    let input : u32 = 0;
    let x : u32 = fun0(&mut input);

    return x;

}